tests/ui/stability-attribute/eager-expansion-fail.stderr
error: expression in the value of this attribute must be a literal or macro call
  --> $DIR/eager-expansion-fail.rs:19:28
   |
LL |         #[stable(feature = 1 + 1, since = "?")]
   |                            ^^^^^
...
LL | m!();
   | ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expression in the value of this attribute must be a literal or macro call
  --> $DIR/eager-expansion-fail.rs:22:28
   |
LL |         #[stable(feature = not_a_literal!(), since = "?")]
   |                            ^^^^^^^^^^^^^^^^
...
LL | m!();
   | ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected unsuffixed literal or identifier, found `deprecation_msg`
  --> $DIR/eager-expansion-fail.rs:26:31
   |
LL |         #[deprecated(reason = deprecation_msg!())]
   |                               ^^^^^^^^^^^^^^^
...
LL | m!();
   | ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct has missing stability attribute
  --> $DIR/eager-expansion-fail.rs:20:9
   |
LL |         pub struct Math;
   |         ^^^^^^^^^^^^^^^^
...
LL | m!();
   | ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct has missing stability attribute
  --> $DIR/eager-expansion-fail.rs:23:9
   |
LL |         pub struct NotLiteral;
   |         ^^^^^^^^^^^^^^^^^^^^^^
...
LL | m!();
   | ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

